# decaf-rs-pa

./: .gitignore  .gitmodules  fuzz1.decaf  fuzz2.decaf  fuzz3.decaf  report-PA1-A.md  report-PA1-B.md  report-PA2.md  report-PA3.md
.github/workflows/: rust.yml
codegen/: lib.wast
codegen/src/: lib.rs  mips_gen.rs  wast.rs  wast_gen.rs
common/src/: errors.rs
driver/: Cargo.toml
driver/src/: cli.rs  fuzz.rs  lib.rs  test.rs  test_util.rs
print/: Cargo.toml
print/src/: ast.rs  lib.rs  mips.rs  scope.rs  tac.rs  wast.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  parser.rs  parser_ll.rs  symbol.rs  ty.rs
tac/src/: lib.rs
tacgen/src/: info.rs  lib.rs
tacopt/src/: aliveness.rs  bb.rs  common_expr.rs  const_prop.rs  flow.rs
typeck/: Cargo.toml
typeck/src/: lib.rs  scope_stack.rs  symbol_pass.rs  type_pass.rs
